# Chromar

./: .gitignore  .hlint.yaml  ColouredPetriNets.hs  Ext.hs  Fluent.hs  Observables.hs  Output.hs  README.md  RuleParser.hs  RuleQuotes.hs  cabal.project  chromar.cabal  coloured-petri-nets.cabal  main.hs  model.hs  modelQuotes.hs  package.dhall  plantQ.hs  stack.yaml
.github/workflows/: cabal.yml  hlint-ci.yml
models/: gdiff.hs  model.hs  plant.hs  plantQ.hs  simple.hs
models/market/: Market.hs
models/seedsModel/: .#plot.hs  Env.hs  Germ.hs  GermM.hs  GermS.hs  Utils.hs
src/: Chromar.hs  SChromar.hs
src-ghc-8.10/Internal/: RuleQuotes.hs
src-ghc-8.6/Internal/: RuleQuotes.hs
src-ghc-8.8/Internal/: RuleQuotes.hs
src/Abstract/: Abs.hs
src/Chromar/: Core.hs  Experiment.hs  Fluent.hs  IMultiset.hs  MAttrs.hs  MRuleParser.hs  Multiset.hs  Observables.hs  RExprs.hs  RuleParser.hs  RuleQuotes.hs  RuleQuotesE.hs  SRuleQuotes.hs  Sim.hs
src/Chromar/Enriched/: Parse.hs  Syntax.hs  TH.hs  Zip.hs
src/Chromar/Meta/: Mml.hs  Types.hs
src/Chromar/Rule/: Attributes.hs  Parse.hs  Syntax.hs  TH.hs
src/Meta/: Abs.hs
stack/: stack-8.10.3.yaml  stack-8.10.4.yaml  stack-8.6.5.yaml  stack-8.8.3.yaml  stack-8.8.4.yaml
test-suite-doctest/: DocTest.hs
test-suite-hlint/: HLint.hs
