name:                coloured-petri-nets
version:             0.1.0.0
synopsis:            none
homepage:            none
author:              none
maintainer:          none
build-type:          Simple
cabal-version:       >=1.8

library
  ghc-options: -ddump-splices
  build-depends:      base >=4.8 && <4.9,
                      random >=1.1 && <1.2,
                      parsec >=3.1 && <3.2,
                      template-haskell >=2.10 && <2.11,
                      haskell-src-meta >= 0.6,
                      containers >=0.5
		 
  hs-source-dirs:     src

  exposed-modules:    Chromar.Core
                      Chromar.Observables
                      Chromar.RuleParser
                      Chromar.RuleQuotes
                      Chromar.Fluent
                      Chromar.Multiset
                      Chromar.MAttrs
                      Chromar
   
  other-extensions:   BangPatterns

  default-language:   Haskell2010


executable seeds

 hs-source-dirs:    models/seedsModel
 main-is:           Germ.hs
 other-modules:     Env
 build-depends:     base >=4.8 && <4.9,
                    random >=1.1 && <1.2,
                    text >= 1.2,
                    Chart,
                    Chart-diagrams,
                    containers >=0.5,
                    coloured-petri-nets,
                    normaldistribution >= 1.1

executable market

 ghc-options:       -ddump-splices
 hs-source-dirs: models/market
 main-is:        Market.hs
 build-depends:  base >=4.8 && <4.9,
                 random >=1.1 && <1.2,
                 Chart,
                 Chart-diagrams,
                 coloured-petri-nets,
                 normaldistribution >= 1.1
		 
executable seedsD

 hs-source-dirs:    models/seedsModel
 main-is:           Utils.hs
 other-modules:     Env
 build-depends:     base >=4.8 && <4.9,
                    random >=1.1 && <1.2,
                    text >= 1.2,
                    Chart,
                    Chart-diagrams,
                    containers >=0.5,
                    coloured-petri-nets,
                    normaldistribution >= 1.1