name:                coloured-petri-nets
version:             0.1.0.0
synopsis:            none
homepage:            none
author:              none
maintainer:          none
build-type:          Simple
cabal-version:       >=1.8

library
  build-depends:      base >=4.8 && <4.9,
                      random >=1.1 && <1.2,
                      parsec >=3.1 && <3.2,
                      template-haskell >=2.10 && <2.11,
                      haskell-src-meta >= 0.6,
                      containers >=0.5
		 
  hs-source-dirs:     src

  exposed-modules:    Chromar.Sim
                      Chromar.Core
                      Chromar.MRuleParser
                      Chromar.RuleParser
                      Chromar.RuleQuotes
                      Chromar.Fluent
                      Chromar.Observables
                      Chromar.Multiset
                      Chromar.MAttrs
                      Chromar
   
  other-extensions:   BangPatterns

  default-language:   Haskell2010


executable seeds

 hs-source-dirs:    models/seedsModel
 main-is:           GermS.hs
 other-modules:     Env
 build-depends:     base >=4.8 && <4.9,
                    random >=1.1 && <1.2,
                    text >= 1.2,
                    Chart,
                    Chart-diagrams,
                    containers >=0.5,
                    coloured-petri-nets,
                    normaldistribution >= 1.1