name:                coloured-petri-nets
version:             0.1.0.0
synopsis:            none
homepage:            none
author:              none
maintainer:          none
build-type:          Simple
cabal-version:       >=1.8

library
  build-depends:      base,
                      random >=1.1 && <1.2,
                      parsec >=3.1 && <3.2,
                      template-haskell >=2.10 && <2.12,
                      haskell-src-meta >= 0.6,
                      containers >=0.5,
                      multiset >= 0.3
  ghc-options:	      -O2
		 
  hs-source-dirs:     src

  exposed-modules:    Chromar.Core
                      Chromar.RuleQuotesE
                      Chromar.Multiset
                      Chromar.MAttrs
                      Chromar.MRuleParser
                      Chromar.RExprs
                      Chromar
   
  other-extensions:   BangPatterns

  default-language:   Haskell2010